--- a/sdks/java/io/pulsar/build.gradle
+++ b/sdks/java/io/pulsar/build.gradle
@@ -1,12 +1,30 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * License); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an AS IS BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 plugins { id 'org.apache.beam.module' }
 applyJavaNature(automaticModuleName: 'org.apache.beam.sdk.io.pulsar')
 
-def pulsarVersion = '2.8.0'
+def pulsar_version = '2.8.2'
 
 
 dependencies {
-    compile group: 'org.apache.pulsar', name: 'pulsar-client', version: pulsarVersion
-    compile group: 'org.apache.pulsar', name: 'pulsar-client-admin', version: pulsarVersion
+    compile "org.apache.pulsar:pulsar-client:$pulsar_version"
+    compile "org.apache.pulsar:pulsar-client-admin:$pulsar_version"
     compile project(path: ":sdks:java:core", configuration: "shadow")
     compile project(":runners:core-construction-java")
 
@@ -18,8 +36,4 @@ dependencies {
     testImplementation "org.testcontainers:pulsar:1.15.3"
     testImplementation "org.assertj:assertj-core:2.9.1"
 
-}
-
-test {
-    include '**/*IT.class'
 }
