--- a/.github/workflows/job-postcommit-python-examples-direct.yml
+++ b/.github/workflows/job-postcommit-python-examples-direct.yml
@@ -31,11 +31,38 @@ on:
     tags: 'v*'
 
 jobs:
+  check_gcp_variables:
+    timeout-minutes: 5
+    name: "Check GCP variables"
+    runs-on: ubuntu-latest
+    outputs:
+      gcp-variables-set: ${{ steps.check_gcp_variables.outputs.gcp-variables-set }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: "Check are GCP variables set"
+        run: "./scripts/ci/ci_check_are_gcp_variables_set.sh"
+        id: check_gcp_variables
+        env:
+          GCP_SA_EMAIL: ${{ secrets.GCP_SA_EMAIL }}
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+          GCP_PYTHON_WHEELS_BUCKET: ${{ secrets.GCP_PYTHON_WHEELS_BUCKET }}
+          GCP_PROJECT_ID: "not-needed-here"
+          GCP_REGION: "not-needed-here"
+          GCP_TESTING_BUCKET: "not-needed-here"
+
   python-examples-direct:
     name: Python Direct Runner Examples
+    needs:
+      - check_gcp_variables
     runs-on: self-hosted
     timeout-minutes: 120
+    if: needs.check_gcp_variables.outputs.gcp-variables-set == 'true'
     steps:
+      - name: Authenticate on GCP
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
       - name: Checkout code
         uses: actions/checkout@v2
         with:
