Migrate Python Examples Direct from Jenkins to GA

--- a/.github/workflows/job-postcommit-python-examples-direct.yml
+++ b/.github/workflows/job-postcommit-python-examples-direct.yml
@@ -45,7 +45,7 @@ jobs:
         env:
           GCP_SA_EMAIL: ${{ secrets.GCP_SA_EMAIL }}
           GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-          GCP_PYTHON_WHEELS_BUCKET: ${{ secrets.GCP_PYTHON_WHEELS_BUCKET }}
+          GCP_PYTHON_WHEELS_BUCKET: "not-needed-here"
           GCP_PROJECT_ID: "not-needed-here"
           GCP_REGION: "not-needed-here"
           GCP_TESTING_BUCKET: "not-needed-here"
