Migrate Python Examples with SparkRunner Job from Jenkins to GA

--- a/.github/workflows/job-postcommit-python-examples-spark.yml
+++ b/.github/workflows/job-postcommit-python-examples-spark.yml
@@ -15,9 +15,9 @@
 # specific language governing permissions and limitations
 # under the License.
 
-# This workflow will run the Python examples tests with DirectRunner.
+# This workflow will run the Python examples tests with SparkRunner.
 
-name: PostCommit_Python_Examples_Direct
+name: PostCommit_Python_Examples_Spark
 
 on:
   schedule:
@@ -25,10 +25,14 @@ on:
   push:
     branches: ['master', 'release-*']
     tags: 'v*'
+  # TODO: Delete before merge
+  pull_request:
+    branches: ['master', 'release-*']
+    tags: 'v*'
 
 jobs:
-  python-examples-direct:
-    name: Python Direct Runner Examples
+  python-examples-spark:
+    name: Python Spark Runner Examples
     runs-on: self-hosted
     timeout-minutes: 120
     steps:
@@ -37,7 +41,7 @@ jobs:
         with:
           persist-credentials: false
           submodules: recursive
-      - name: Run :sdks:python:test-suites:direct:examplesPostCommit
+      - name: Run :sdks:python:test-suites:portable:sparkExamplesPostCommit
         uses: ./.github/actions/gradle-command-self-hosted-action
         with:
-          gradle-command: :sdks:python:test-suites:direct:examplesPostCommit
+          gradle-command: :sdks:python:test-suites:portable:sparkExamplesPostCommit
